<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">


    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_fruit_page_upload_button"
        android:background="@color/green"
        android:textColor="@color/white"
        android:padding="@dimen/default_margin"
        style="@style/TitleTextStyle"/>


    <ImageView
        android:id="@+id/preview2_image"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:scaleType="centerCrop"
        android:src="@drawable/trending2" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_fruit_page_name_input"
        android:paddingLeft="@dimen/default_margin"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_fruit_page_description_input"
        android:paddingLeft="@dimen/default_margin"/>


    <EditText
        android:id="@+id/calorie_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_fruit_page_calorie_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefautTextStyle"/>

    <EditText
        android:id="@+id/recettes_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_fruit_page_recettes_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefautTextStyle"/>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/add_fruit_page_confirm_button"
        android:textColor="@color/white"
        android:background="@color/black"
        style="@style/TitleTextStyle"/>



</LinearLayout>